examples/applications/multi-port/static-fake-service.yaml
apiVersion: v1
kind: Service
metadata:
  # This name will be the service name in Consul.
  name: static-client
spec:
  selector:
    app: static-client
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-client
  template:
    metadata:
      name: static-client
      labels:
        app: static-client
      annotations:
        'consul.hashicorp.com/connect-inject': 'true'
        # 'consul.hashicorp.com/connect-service-upstreams': "web:1234,web-admin:2234"
    spec:
      containers:
        - name: static-client
          image: panchalravi/fake-service:0.24.2
          ports:
            - containerPort: 8080
          securityContext:
            privileged: true
      serviceAccountName: static-client
