examples/applications/multi-port/api-gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: default
spec:
  gatewayClassName: consul-api-gateway
  listeners:
  - protocol: TCP
    port: 80
    name: tcp
    allowedRoutes:
      namespaces:
        from: All
