examples/applications/multi-port/routes.yml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mysql-route
  namespace: default
spec:
  parentRefs:
  - name: api-gateway
  rules:
  - backendRefs:
    - kind: Service
      name: mysql
      namespace: default
      port: 3306
